--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "discord.js": "^12.5.1",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "level-session-store": "^2.2.0",
+    "lowdb": "^1.0.0",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   },
   "engines": {
     "node": "12.x"
