--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.1",
     "level-session-store": "^2.2.0",
     "lowdb": "^1.0.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
     "path": "^0.12.7",
