--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "discord.js": "^12.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
     "level-session-store": "^2.2.0",
     "lowdb": "^1.0.0",
+    "momen": "^1000.0.0",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
