--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
     "path": "^0.12.7",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "fs": "^0.0.2"
   },
   "engines": {
     "node": "12.x"
