--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "passport-discord": "^0.1.4",
     "path": "^0.12.7",
     "url": "^0.11.0",
-    "fs": "^0.0.2"
+    "fs": "^0.0.2",
+    "quick.db": "^7.1.2"
   },
   "engines": {
     "node": "12.x"
