--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "url": "^0.11.0",
     "fs": "^0.0.2",
     "better-sqlite3": "^7.1.2",
-    "nukleon": "^0.0.2"
+    "nukleon": "^0.0.2",
+    "darkmode-js": "^1.5.6"
   },
   "engines": {
     "node": "12.x"
